--- a/LeaveManagement.Web/Views/LeaveTypes/Details.cshtml
+++ b/LeaveManagement.Web/Views/LeaveTypes/Details.cshtml
@@ -1,13 +1,12 @@
-﻿@model LeaveManagement.Web.Data.LeaveType
+﻿@model LeaveTypeVM
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Details for @Model.Name</h1>
 
 <div>
-    <h4>LeaveType</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -22,21 +21,10 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DefaultDays)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateCreated)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateCreated)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateModified)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateModified)
-        </dd>
     </dl>
 </div>
+<br />
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-warning"><i class="fas fa-pencil-alt"></i></a>
 </div>
